--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ Program:Google Chrome |  3d15h24m00s |      21.60
       Program:Desktop |     5h13m00s |       1.29
  Program:File browser |     4h11m00s |       1.03
  (53 entries omitted) |    22h59m00s |       5.68</pre>
+
 			</section>
 
 			<section id="install">
@@ -140,7 +141,7 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 					</li>
 					<li>
 						<b>Windows:</b><br>Download the
-						<a href="http://www.joachim-breitner.de/archive/arbtt/arbtt-setup-0.4.5.1.exe">installer</a>
+						latest <a href="http://www.joachim-breitner.de/archive/arbtt/">arbtt-setup.exe</a>
 						and follow the setup process as usual. This will set up the capturing daemon,
 						but note that there is no graphical interface. Extracting stats from the data
 						requires running arbtt-stats on the command line. Run
