Replace usage by link to the documentation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<li><a href="#what">What is it?</a></li>
 				<li><a href="#how">How does it work?</a></li>
 				<li><a href="#install">Installation</a></li>
-				<li><a href="#usage">Usage</a></li>
+				<li><a href="http://darcs.nomeata.de/arbtt/doc/users_guide/index.html">Documentation</a></li>
 				<li><a href="#get-involved">Get involved</a></li>
 			</ul>
 		</nav>
@@ -162,37 +162,6 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 						in the Exec line of the .desktop file.</p>
 					</li>
 				</ul>
-			</section>
-
-			<section id="usage">
-				<h2>Usage</h2>
-
-				<h3>Quickstart</h3>
-				<p>Here are some useful rules and command options to perform several common tasks:</p>
-				<ul>
-					<li><b>List all entries from the past hour:</b></li>
-					<blockquote>
-					In categorize.cfg: <code>tag Title:$current.title,</code><br>
-					On the command line:
-					<code class="command">arbtt-stats --intervals=Title: --filter '$sampleage &lt;= 1:00'</code>
-					</blockquote></li>
-					<li>...</li>
-				</ul>
-
-				<h3>Documentation</h3>
-				<p>For more detailed information and examples of how to setup
-				the categorization used by arbtt-stats, check the
-				<a href="http://darcs.nomeata.de/arbtt/doc/users_guide/configuration.html">Configuration</a>
-				section of the documentation.</p>
-
-				<p>For a comprehensive overview of commands and options, visit the
-				<a href="http://darcs.nomeata.de/arbtt/doc/users_guide/references.html">Reference</a>
-				section of the documentation (i.e. the man pages).</p>
-
-				<h3>Troubleshooting</h3>
-				<p>If you're having issues, check the
-				<a href="http://darcs.nomeata.de/arbtt/doc/users_guide/troubleshooting.html">Troubleshooting</a>
-				page, or ask in the mailing list (<code>arbtt@lists.nomeata.de</code>).</p>
 			</section>
 
 			<section id="get-involved">
