--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 				<a href="https://lists.nomeata.de/mailman/listinfo/arbtt">its info page</a>.</p>
 
 				<p>The source code is in <a href="http://haskell.org">Haskell</a>,
-				and is managed in a darcs* repository
+				and is managed in a darcs<sup>☆</sup> repository
 				(<a href="http://darcs.nomeata.de/cgi-bin/darcsweb.cgi?r=arbtt;a=summary">browse it online</a>).
 				You can fetch the code with:<br>
 				<code class="command">darcs get http://darcs.nomeata.de/arbtt</code><br>
-				<blockquote><i>* <a href="http://darcs.net/">darcs</a>
+				<blockquote><i><sup>☆</sup><a href="http://darcs.net/">darcs</a>
 				is a distributed version control system, very similar to git
 				and easy to get started with. Here's an excellent
 				<a href="http://darcs.net/QuickStart?export&amp;format=Slidy">quickstart slideshow</a>
