Redo get-involved, renam to contact

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<li><a href="#how">How does it work?</a></li>
 				<li><a href="#install">Installation</a></li>
 				<li><a href="http://darcs.nomeata.de/arbtt/doc/users_guide/index.html">Documentation</a></li>
-				<li><a href="#get-involved">Get involved</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
 		<div id="content">
@@ -164,25 +164,28 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 				</ul>
 			</section>
 
-			<section id="get-involved">
-				<h2>Get involved</h2>
-				<p>You are very welcome to help the developement of arbtt,
-				by contributing feedback, ideas, bug reports, patches or documentation.
-				Any contribution, big or small, is highly appreciated!
-				The main communication channel is the arbtt mailing list:
-				<code>arbtt@lists.nomeata.de</code>. To subscribe to it, visit
-				<a href="https://lists.nomeata.de/mailman/listinfo/arbtt">its info page</a>.</p>
+			<section id="contact">
+				<h2>Contact</h2>
+			        <p>
+The main communication channel is the arbtt mailing list,
+<code>arbtt@lists.nomeata.de</code>, which is used for both users and
+developers of arbtt. If you have questions about arbtt, want to report bugs, or
+just share your experience with it, please join. Also any contributions in the
+form of ideas, code or documentation is highly appreciated. To subscribe to it,
+visit <a href="https://lists.nomeata.de/mailman/listinfo/arbtt">the mailinglist page</a>.</p>
 
-				<p>The source code is in <a href="http://haskell.org">Haskell</a>,
-				and is managed in a darcs<sup>☆</sup> repository
-				(<a href="http://darcs.nomeata.de/cgi-bin/darcsweb.cgi?r=arbtt;a=summary">browse it online</a>).
-				You can fetch the code with:<br>
-				<code class="command">darcs get http://darcs.nomeata.de/arbtt</code><br>
-				<blockquote><i><sup>☆</sup><a href="http://darcs.net/">darcs</a>
-				is a distributed version control system, very similar to git
-				and easy to get started with. Here's an excellent
-				<a href="http://darcs.net/QuickStart?export&amp;format=Slidy">quickstart slideshow</a>
-				for getting acquainted with the basics.</i></blockquote>
+<p>The source code is in <a href="http://haskell.org">Haskell</a>,
+and is managed in a darcs<sup>☆</sup> repository
+(<a href="http://darcs.nomeata.de/cgi-bin/darcsweb.cgi?r=arbtt;a=summary">browse it online</a>).
+You can fetch the code with:<br>
+<code class="command">darcs get http://darcs.nomeata.de/arbtt</code></p>
+
+<blockquote><i><sup>☆</sup><a href="http://darcs.net/">darcs</a> is a
+distributed version control system, very similar to git and easy to get started
+with. Here's an excellent <a href="http://darcs.net/QuickStart?export&amp;format=Slidy">quickstart
+slideshow</a> for getting acquainted with the basics.</i></blockquote>
+
+<p>This webpage was designed by Waldir Pimenta. The background image is <a href="http://commons.wikimedia.org/wiki/File:Revolutionstaschenuhr.jpg">Revolutionstaschenuhr</a> by Onnahfarg; CC-BY</p>.
 			</section>
 		</div>
 	</div>
