Mark the Documentation link with an arrow, as it is external

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<li><a href="#what">What is it?</a></li>
 				<li><a href="#how">How does it work?</a></li>
 				<li><a href="#install">Installation</a></li>
-				<li><a href="http://darcs.nomeata.de/arbtt/doc/users_guide/index.html">Documentation</a></li>
+				<li><a href="http://darcs.nomeata.de/arbtt/doc/users_guide/index.html">→ Documentation</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
