Use local links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<li><a href="#what">What is it?</a></li>
 				<li><a href="#how">How does it work?</a></li>
 				<li><a href="#install">Installation</a></li>
-				<li><a href="http://darcs.nomeata.de/arbtt/doc/users_guide/index.html">→ Documentation</a></li>
+				<li><a href="doc/users_guide/index.html">→ Documentation</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
@@ -147,7 +147,7 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 						requires running arbtt-stats on the command line. Run
 						<code>arbtt-stats --help</code> for a quick reference;
 						for more detailed information, consult the
-						<a href="http://darcs.nomeata.de/arbtt/doc/users_guide/arbtt-stats.html">manual</a>.
+						<a href="doc/users_guide/arbtt-stats.html">manual</a>.
 					</li>
 					<li>
 						<b>Build from source:</b>
