Link to my homepage

--- a/arbtt.html
+++ b/arbtt.html
@@ -185,7 +185,7 @@ distributed version control system, very similar to git and easy to get started
 with. Here's an excellent <a href="http://darcs.net/QuickStart?export&amp;format=Slidy">quickstart
 slideshow</a> for getting acquainted with the basics.</i></blockquote>
 
-<p>This webpage was designed by Waldir Pimenta. The background image is <a href="http://commons.wikimedia.org/wiki/File:Revolutionstaschenuhr.jpg">Revolutionstaschenuhr</a> by Onnahfarg; CC-BY</p>.
+<p>Arbtt written by <a href="http://www.joachim-breitner.de/">Joachim Breitner</a>. This webpage was designed by Waldir Pimenta. The background image is <a href="http://commons.wikimedia.org/wiki/File:Revolutionstaschenuhr.jpg">Revolutionstaschenuhr</a> by Onnahfarg; CC-BY</p>.
 			</section>
 		</div>
 	</div>
