Rename to Get in touch

--- a/arbtt.html
+++ b/arbtt.html
@@ -16,7 +16,7 @@
 				<li><a href="#how">How does it work?</a></li>
 				<li><a href="#install">Installation</a></li>
 				<li><a href="doc/users_guide/index.html">→ Documentation</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="#contact">Get in touch</a></li>
 			</ul>
 		</nav>
 		<div id="content">
@@ -165,7 +165,7 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 			</section>
 
 			<section id="contact">
-				<h2>Contact</h2>
+				<h2>Get in touch</h2>
 			        <p>
 The main communication channel is the arbtt mailing list,
 <code>arbtt@lists.nomeata.de</code>, which is used for both users and
