--- a/arbtt.html
+++ b/arbtt.html
@@ -166,6 +166,7 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 
 			<section id="contact">
 				<h2>Get in touch</h2>
+				<h3>Mailing list</h3>
 			        <p>
 The main communication channel is the arbtt mailing list,
 <code>arbtt@lists.nomeata.de</code>, which is used for both users and
@@ -174,6 +175,7 @@ just share your experience with it, please join. Also any contributions in the
 form of ideas, code or documentation is highly appreciated. To subscribe to it,
 visit <a href="https://lists.nomeata.de/mailman/listinfo/arbtt">the mailinglist page</a>.</p>
 
+				<h3>Developement repository</h3>
 <p>The source code is in <a href="http://haskell.org">Haskell</a>,
 and is managed in a darcs<sup>☆</sup> repository
 (<a href="http://darcs.nomeata.de/cgi-bin/darcsweb.cgi?r=arbtt;a=summary">browse it online</a>).
@@ -185,7 +187,8 @@ distributed version control system, very similar to git and easy to get started
 with. Here's an excellent <a href="http://darcs.net/QuickStart?export&amp;format=Slidy">quickstart
 slideshow</a> for getting acquainted with the basics.</i></blockquote>
 
-<p>Arbtt written by <a href="http://www.joachim-breitner.de/">Joachim Breitner</a>. This webpage was designed by Waldir Pimenta. The background image is <a href="http://commons.wikimedia.org/wiki/File:Revolutionstaschenuhr.jpg">Revolutionstaschenuhr</a> by Onnahfarg; CC-BY</p>.
+				<h3>History and credits</h3>
+<p>Arbtt was created in 2009 by <a href="http://www.joachim-breitner.de/">Joachim Breitner</a>. This webpage was designed by Waldir Pimenta in 2013. The background image is <a href="http://commons.wikimedia.org/wiki/File:Revolutionstaschenuhr.jpg">Revolutionstaschenuhr</a> by Onnahfarg; CC-BY</p>.
 			</section>
 		</div>
 	</div>
