Mention Git Mirrors and issue tracker on arbtt homepage

--- a/arbtt.html
+++ b/arbtt.html
@@ -16,6 +16,7 @@
 				<li><a href="#how">How does it work?</a></li>
 				<li><a href="#install">Installation</a></li>
 				<li><a href="doc/users_guide/index.html">→ Documentation</a></li>
+				<li><a href="https://bitbucket.org/nomeata/arbtt/issues">→ Bugs and issues</a></li>
 				<li><a href="#contact">Get in touch</a></li>
 			</ul>
 		</nav>
@@ -175,6 +176,11 @@ just share your experience with it, please join. Also any contributions in the
 form of ideas, code or documentation is highly appreciated. To subscribe to it,
 visit <a href="https://lists.nomeata.de/mailman/listinfo/arbtt">the mailinglist page</a>.</p>
 
+				<h3>Mailing list</h3>
+			        <p>
+In addition to the mailing list, we use the <a href="https://bitbucket.org/nomeata/arbtt/issues">issue tracker of the bitbucket repository</a>. Why BitBucket, and not GitHub? Becuase we need diversity, even and espeically in the cloud! But do not worry, you can use your GitHub account there.
+                                </p>
+
 				<h3>Developement repository</h3>
 <p>The source code is in <a href="http://haskell.org">Haskell</a>,
 and is managed in a darcs<sup>☆</sup> repository
@@ -186,6 +192,13 @@ You can fetch the code with:<br>
 distributed version control system, very similar to git and easy to get started
 with. Here's an excellent <a href="http://darcs.net/QuickStart?export&amp;format=Slidy">quickstart
 slideshow</a> for getting acquainted with the basics.</i></blockquote>
+
+<p>Git mirrors are available at:</p>
+<ul>
+<li><a href="http://git.nomeata.de/?p=darcs-mirror-arbtt.git">http://git.nomeata.de/?p=darcs-mirror-arbtt.git</a><br /></li>
+<li><a href="https://github.com/nomeata/darcs-mirror-arbtt">https://github.com/nomeata/darcs-mirror-arbtt</a><br /></li>
+<li><a href="https://bitbucket.org/nomeata/arbtt">https://bitbucket.org/nomeata/arbtt</a></li>
+</ul>
 
 				<h3>History and credits</h3>
 <p>Arbtt was created in 2009 by <a href="http://www.joachim-breitner.de/">Joachim Breitner</a>. This webpage was designed by Waldir Pimenta in 2013. The background image is <a href="http://commons.wikimedia.org/wiki/File:Revolutionstaschenuhr.jpg">Revolutionstaschenuhr</a> by Onnahfarg; CC-BY</p>.
