--- a/arbtt.html
+++ b/arbtt.html
@@ -176,7 +176,7 @@ just share your experience with it, please join. Also any contributions in the
 form of ideas, code or documentation is highly appreciated. To subscribe to it,
 visit <a href="https://lists.nomeata.de/mailman/listinfo/arbtt">the mailinglist page</a>.</p>
 
-				<h3>Mailing list</h3>
+				<h3>Issue tracker</h3>
 			        <p>
 In addition to the mailing list, we use the <a href="https://bitbucket.org/nomeata/arbtt/issues">issue tracker of the bitbucket repository</a>. Why BitBucket, and not GitHub? Becuase we need diversity, even and espeically in the cloud! But do not worry, you can use your GitHub account there.
                                 </p>
