--- a/arbtt.html
+++ b/arbtt.html
@@ -178,7 +178,7 @@ visit <a href="https://lists.nomeata.de/mailman/listinfo/arbtt">the mailinglist 
 
 				<h3>Issue tracker</h3>
 			        <p>
-In addition to the mailing list, we use the <a href="https://bitbucket.org/nomeata/arbtt/issues">issue tracker of the bitbucket repository</a>. Why BitBucket, and not GitHub? Becuase we need diversity, even and espeically in the cloud! But do not worry, you can use your GitHub account there.
+In addition to the mailing list, we use the <a href="https://bitbucket.org/nomeata/arbtt/issues">issue tracker of the bitbucket repository</a>. Why BitBucket, and not GitHub? Becuase we need diversity, even and especially in the cloud! But do not worry, you can use your GitHub account there.
                                 </p>
 
 				<h3>Developement repository</h3>
