Add MAC OS X documentation for compiling

--- a/arbtt.html
+++ b/arbtt.html
@@ -176,6 +176,21 @@ Program:Google Chrome |  3d15h24m00s |      21.60
                         you'll probably need to put the full path to arbtt-capture
                         in the Exec line of the .desktop file.</p>
                     </li>
+
+                    <li>
+                        <b>Mac OS X support:</b>
+                        <p>arbtt can run on Mac OS X systems. To compile it, you need to install the pkgconfig and pcre source packages
+                        using <a href="http://brew.sh">Homebrew</a> or <a href="https://www.macports.org">MacPorts</a>. For Homebrew, you can execute:</p>
+                        <code class="command">brew install pkgconfig</code><br>
+                        <code class="command">brew install pcre</code><br>
+                        <p>or for MacPorts:</p>
+                        <code class="command">sudo port install pkgconfig</code><br>
+                        <code class="command">sudo port install pcre</code><br>
+                        <p>Then, you can compile arbtt using the usual cabal commands.</p>
+                        <p>If you use MacPorts and have a linking error, it may be because of a conflict between the system libiconv and the MacPorts libiconv.
+                        Execute the following cabal command to resolve the conflict:</p>
+                        <code class="command">cabal configure --extra-lib-dir=/usr/lib</code><br>
+                        <p>When the installation is done, your arbtt binaries will be located in <code>~/Library/Haskell/bin</code> or <code>~/.cabal/bin</code>.</p>
                     </li>
                 </ul>
             </section>
