--- a/website/index.html
+++ b/website/index.html
@@ -197,14 +197,6 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 
             <section id="contact">
                 <h2>Get in touch</h2>
-                <h3>Mailing list</h3>
-                    <p>
-The main communication channel is the arbtt mailing list,
-<code>arbtt@lists.nomeata.de</code>, which is used for both users and
-developers of arbtt. If you have questions about arbtt, want to report bugs, or
-just share your experience with it, please join. Also any contributions in the
-form of ideas, code or documentation is highly appreciated. To subscribe to it,
-visit <a href="https://lists.nomeata.de/mailman/listinfo/arbtt">the mailinglist page</a>.</p>
 
                 <h3>Issue tracker</h3>
                     <p>
@@ -212,23 +204,9 @@ In addition to the mailing list, we use the <a href="https://bitbucket.org/nomea
                                 </p>
 
                 <h3>Developement repository</h3>
-<p>The source code is in <a href="http://haskell.org">Haskell</a>,
-and is managed in a darcs<sup>☆</sup> repository
-(<a href="http://darcs.nomeata.de/cgi-bin/darcsweb.cgi?r=arbtt;a=summary">browse it online</a>).
-You can fetch the code with:<br>
-<code class="command">darcs get http://darcs.nomeata.de/arbtt</code></p>
-
-<blockquote><i><sup>☆</sup><a href="http://darcs.net/">darcs</a> is a
-distributed version control system, very similar to git and easy to get started
-with. Here's an excellent <a href="http://darcs.net/QuickStart?export&amp;format=Slidy">quickstart
-slideshow</a> for getting acquainted with the basics.</i></blockquote>
-
-<p>Git mirrors are available at:</p>
-<ul>
-<li><a href="http://git.nomeata.de/?p=darcs-mirror-arbtt.git">http://git.nomeata.de/?p=darcs-mirror-arbtt.git</a><br /></li>
-<li><a href="https://github.com/nomeata/darcs-mirror-arbtt">https://github.com/nomeata/darcs-mirror-arbtt</a><br /></li>
-<li><a href="https://bitbucket.org/nomeata/arbtt">https://bitbucket.org/nomeata/arbtt</a></li>
-</ul>
+<p>The source code is written in <a href="https://haskell.org">Haskell</a>,
+<a href="https://bitbucket.org/nomeata/arbtt/">hosted on Bitbucket</a>. You can also use the mirror at <a href="https://github.com/nomeata/darcs-mirror-arbtt">GitHub</a>
+</p>
 
                 <h3>History and credits</h3>
 <p>Arbtt was created in 2009 by <a href="http://www.joachim-breitner.de/">Joachim Breitner</a>. This webpage was designed by Waldir Pimenta in 2013. The background image is <a href="http://commons.wikimedia.org/wiki/File:Revolutionstaschenuhr.jpg">Revolutionstaschenuhr</a> by Onnahfarg; CC-BY</p>.
