Issues are now on Github, not bitbucket

--- a/website/index.html
+++ b/website/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#how">How does it work?</a></li>
                 <li><a href="#install">Installation</a></li>
                 <li><a href="doc/users_guide/index.html">→ Documentation</a></li>
-                <li><a href="https://bitbucket.org/nomeata/arbtt/issues">→ Bugs and issues</a></li>
+                <li><a href="https://github.com/nomeata/arbtt/issues">→ Bugs and issues</a></li>
                 <li><a href="#contact">Get in touch</a></li>
             </ul>
         </nav>
@@ -200,12 +200,12 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 
                 <h3>Issue tracker</h3>
                     <p>
-In addition to the mailing list, we use the <a href="https://bitbucket.org/nomeata/arbtt/issues">issue tracker of the bitbucket repository</a>. Why BitBucket, and not GitHub? Becuase we need diversity, even and especially in the cloud! But do not worry, you can use your GitHub account there.
-                                </p>
+In addition to the mailing list, we use the <a href="https://github.com/nomeata/arbtt/issues">issue tracker of the GitHub repository</a>.
+                    </p>
 
                 <h3>Developement repository</h3>
 <p>The source code is written in <a href="https://haskell.org">Haskell</a>,
-<a href="https://bitbucket.org/nomeata/arbtt/">hosted on Bitbucket</a>. You can also use the mirror at <a href="https://github.com/nomeata/darcs-mirror-arbtt">GitHub</a>
+<a href="https://github.com/nomeata/arbtt/">hosted on GitHub</a>.
 </p>
 
                 <h3>History and credits</h3>
