Revert "Don’t link to the mailing list"
This reverts commit f058a1640a0872d5ec16325731d88df3d018e472.

--- a/website/index.html
+++ b/website/index.html
@@ -197,6 +197,14 @@ Program:Google Chrome |  3d15h24m00s |      21.60
 
             <section id="contact">
                 <h2>Get in touch</h2>
+                <h3>Mailing list</h3>
+                    <p>
+The main communication channel is the arbtt mailing list,
+<code>arbtt@lists.nomeata.de</code>, which is used for both users and
+developers of arbtt. If you have questions about arbtt, want to report bugs, or
+just share your experience with it, please join. Also any contributions in the
+form of ideas, code or documentation is highly appreciated. To subscribe to it,
+visit <a href="https://lists.nomeata.de/mailman/listinfo/arbtt">the mailinglist page</a>.</p>
 
                 <h3>Issue tracker</h3>
                     <p>
@@ -204,9 +212,9 @@ In addition to the mailing list, we use the <a href="https://github.com/nomeata/
                     </p>
 
                 <h3>Developement repository</h3>
-<p>The source code is written in <a href="https://haskell.org">Haskell</a>,
-<a href="https://github.com/nomeata/arbtt/">hosted on GitHub</a>.
-</p>
+                <p>The source code is written in <a href="https://haskell.org">Haskell</a>,
+                  <a href="https://github.com/nomeata/arbtt/">hosted on GitHub</a>.
+                </p>
 
                 <h3>History and credits</h3>
 <p>Arbtt was created in 2009 by <a href="http://www.joachim-breitner.de/">Joachim Breitner</a>. This webpage was designed by Waldir Pimenta in 2013. The background image is <a href="http://commons.wikimedia.org/wiki/File:Revolutionstaschenuhr.jpg">Revolutionstaschenuhr</a> by Onnahfarg; CC-BY</p>.
