Fix website typo: "git clone" instead of "git glone"

--- a/website/index.html
+++ b/website/index.html
@@ -164,7 +164,7 @@ Program:Google Chrome |  3d15h24m00s |      21.60
               </p>
 
               <p>Fetch the latest revision using</p>
-              <code class="command">git glone https://github.com/nomeata/arbtt</code><br>
+              <code class="command">git clone https://github.com/nomeata/arbtt</code><br>
               <p>and run the following command to build the arbtt binaries:</p>
               <code class="command">cabal install --installdir=bin --install-method=copy --overwrite-policy=always</code><br>
               <p>You will now find the binaries in the <code>bin</code>
